apps/monitoring/uptime/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma
  namespace: notifications
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: uptime-kuma
  template:
    metadata:
      labels:
        app: uptime-kuma
        networking/expose-web-ui: "true"
    spec:
      containers:
        - name: uptime-kuma
          image: ghcr.io/louislam/uptime-kuma
          ports:
            - name: web-ui
              containerPort: 3001
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
          volumeMounts:
            - name: config
              mountPath: /app/data
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: uptime-kuma-config-pvc
