apps/monitoring/uptime/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma-ui
  namespace: notifications
spec:
  selector:
    app: uptime-kuma
  ports:
    - port: 3001
